add&fix:添加了构建抽象语法树的测试用例，修改了打印抽象语法树的方式

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -6,13 +6,18 @@ set(LLVM_LINK_COMPONENTS
 )
 
 # 2. 定义可执行文件
-add_llvm_executable(tools
+add_llvm_executable(ezcomp
         EzComp.cpp
 )
+set_target_properties(ezcomp PROPERTIES
+        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/build"
+)
+
 
 # 3. 链接库
-target_link_libraries(tools PRIVATE
+target_link_libraries(ezcomp PRIVATE
         # --- 项目库 ---
+        Frontend
 
         # --- 其他 MLIR 基础库 ---
         MLIROptLib
@@ -24,7 +29,7 @@ target_link_libraries(tools PRIVATE
 )
 
 # 4. 设置 RPATH (确保运行时能找到动态库)
-set_target_properties(tools PROPERTIES
+set_target_properties(ezcomp PROPERTIES
         INSTALL_RPATH_USE_LINK_PATH TRUE
         BUILD_WITH_INSTALL_RPATH TRUE
 )
