--- a/EzCompile/Midend/IRGen/CMakeLists.txt
+++ b/EzCompile/Midend/IRGen/CMakeLists.txt
@@ -1,5 +1,4 @@
 # --- EzCompile/Midend/IRGen/CMakeLists.txt ---
 
-target_sources(Midend PRIVATE
-        MLIRGen.cpp
-)
+add_subdirectory(include)
+add_subdirectory(lib)
