add&fix:修改了目录结构，添加了操作的tablegen

--- a/EzCompile/Midend/CMakeLists.txt
+++ b/EzCompile/Midend/CMakeLists.txt
@@ -16,7 +16,7 @@ target_link_libraries(Midend PUBLIC ${llvm_libs})
 target_link_libraries(Midend PUBLIC Frontend)
 
 # 收集头文件
-target_include_directories(Midend PRIVATE
+target_include_directories(Midend PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
