add:添加了pass管线，完成了points操作到arith的降级pass

--- a/EzCompile/Midend/IRGen/CMakeLists.txt
+++ b/EzCompile/Midend/IRGen/CMakeLists.txt
@@ -1,4 +1,5 @@
 # --- EzCompile/Midend/IRGen/CMakeLists.txt ---
 
-add_subdirectory(include)
-add_subdirectory(lib)
+target_sources(Midend PRIVATE
+        MLIRGen.cpp
+)
