add:添加了dim和field的降级pass

--- a/EzCompile/Midend/Conversions/CMakeLists.txt
+++ b/EzCompile/Midend/Conversions/CMakeLists.txt
@@ -1,5 +1,7 @@
 # --- EzCompile/Midend/Conversions/CMakeLists.txt ---
 
 target_sources(Midend PRIVATE
-    LowerCompPointsToArith.cpp
+        LowerCompDim.cpp
+        LowerCompField.cpp
+        LowerCompPoints.cpp
 )
