add:完成了comp.apply_init的降级

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -27,6 +27,8 @@ target_link_libraries(ezcomp PRIVATE
         MLIRSupport
         MLIRPass
         MLIRTransforms
+
+        MLIRAffineDialect
         MLIRArithDialect
         MLIRMemRefDialect
 )
