--- a/EzCompile/Midend/Conversions/CMakeLists.txt
+++ b/EzCompile/Midend/Conversions/CMakeLists.txt
@@ -1,6 +1,7 @@
 # --- EzCompile/Midend/Conversions/CMakeLists.txt ---
 
 target_sources(Midend PRIVATE
+        LowerCompApplyInit.cpp
         LowerCompDim.cpp
         LowerCompField.cpp
         LowerCompPoints.cpp
