add:完成了for_time的降级pass

--- a/EzCompile/Midend/Conversions/CMakeLists.txt
+++ b/EzCompile/Midend/Conversions/CMakeLists.txt
@@ -4,5 +4,6 @@ target_sources(Midend PRIVATE
         LowerCompApplyInit.cpp
         LowerCompDim.cpp
         LowerCompField.cpp
+        LowerCompForTime.cpp
         LowerCompPoints.cpp
 )
