add:完成了comp.dirichlet操作的降级

--- a/EzCompile/Midend/Conversions/CMakeLists.txt
+++ b/EzCompile/Midend/Conversions/CMakeLists.txt
@@ -3,6 +3,7 @@
 target_sources(Midend PRIVATE
         LowerCompApplyInit.cpp
         LowerCompDim.cpp
+        LowerCompDirichlet.cpp
         LowerCompField.cpp
         LowerCompForTime.cpp
         LowerCompPoints.cpp
