add:完成了comp.Update操作的降级

--- a/EzCompile/Midend/Conversions/CMakeLists.txt
+++ b/EzCompile/Midend/Conversions/CMakeLists.txt
@@ -7,4 +7,5 @@ target_sources(Midend PRIVATE
         LowerCompField.cpp
         LowerCompForTime.cpp
         LowerCompPoints.cpp
+        LowerCompUpdate.cpp
 )
