add:添加了对comp.call操作的降级

--- a/EzCompile/Midend/Conversions/CMakeLists.txt
+++ b/EzCompile/Midend/Conversions/CMakeLists.txt
@@ -2,6 +2,7 @@
 
 target_sources(Midend PRIVATE
         LowerCompApplyInit.cpp
+        LowerCompCall.cpp
         LowerCompDim.cpp
         LowerCompDirichlet.cpp
         LowerCompField.cpp
