add:完成了affine和scf的降级

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -30,8 +30,15 @@ target_link_libraries(ezcomp PRIVATE
 
         MLIRAffineDialect
         MLIRArithDialect
+        MLIRControlFlowDialect
+        MLIRFuncDialect
+        MLIRLLVMDialect
         MLIRMathDialect
         MLIRMemRefDialect
+        MLIRSCFDialect
+
+        MLIRAffineToStandard
+        MLIRSCFToControlFlow
 )
 
 # 4. 设置 RPATH (确保运行时能找到动态库)
