--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -28,6 +28,7 @@ target_link_libraries(ezcomp PRIVATE
         MLIRPass
         MLIRTransforms
 
+        # --- 方言库 ---
         MLIRAffineDialect
         MLIRArithDialect
         MLIRControlFlowDialect
@@ -36,9 +37,19 @@ target_link_libraries(ezcomp PRIVATE
         MLIRMathDialect
         MLIRMemRefDialect
         MLIRSCFDialect
+        MLIRUBDialect
 
+        # --- 转换库 ---
         MLIRAffineToStandard
+        MLIRArithToLLVM
+        MLIRControlFlowToLLVM
+        MLIRConvertToLLVMPass
+        MLIRFuncToLLVM
+        MLIRMathToLLVM
+        MLIRMemRefToLLVM
+        MLIRRegisterAllExtensions
         MLIRSCFToControlFlow
+        MLIRUBToLLVM
 )
 
 # 4. 设置 RPATH (确保运行时能找到动态库)
